fixed error in which the wrong image was pushed

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
   settings:
     username: admin
     password: Harbor12345
-    repo: registry.internal.hisao.org/prod/dnspropagator
+    repo: registry.internal.hisao.org/prod/spoticlarative
     registry: registry.internal.hisao.org
     dockerfile: Dockerfile
     tags:
